Fix interaction bar alignment

--- a/frontend/src/components/stylesheets/components/snippet_display.scss
+++ b/frontend/src/components/stylesheets/components/snippet_display.scss
@@ -53,6 +53,8 @@
     }
 
     .interaction-bar-right {
+      display: flex;
+      flex-direction: row;
       
       svg {
         margin-left: 1em;
